Ajout des infos de connexion

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,7 +1,7 @@
 [DB]
-host        = ""
-dbname      = ""
-user        = ""
+host        = "localhost"
+dbname      = "pollygon"
+user        = "root"
 password    = ""
 
 [SECURITY]
