--- a/config/config.ini
+++ b/config/config.ini
@@ -1,7 +1,7 @@
 [DB]
 host        = "localhost"
 dbname      = "pollygon"
-user        = "root"
+user        = "rootaaa"
 password    = ""
 
 [SECURITY]
